--- a/porter.yaml
+++ b/porter.yaml
@@ -25,19 +25,20 @@ credentials:
     env: AWS_SECRET_ACCESS_KEY
     description: "AWS Secret access key"
 
+
+
 parameters:
   - name: cluster
     type: string
-    default: mycluster
+    default: hacking
     description: "Kubernetes cluster name"
   - name: region
     type: string
     default: eu-west-1
     description: "AWS region name" 
   - name: acceptEULA
+    description: "Qliksense End User Licesense Aggrement"
     type: string
-    description: "User has to accept End User License Aggrement's term to install Qliksense"
-    reqired: true
   - name: profile
     type: string
     description: "Select a profile i.e docker-desktop, aws-eks, gke, azure. default is docker-desktop"
@@ -54,6 +55,15 @@ parameters:
     description: "Which namespace the qliksense will be installed"
     type: string
     default: ""
+  - name: kubeconfig
+    ##Before running uninstall 'porter instances outputs kubecofig show -i <name> > mykube'
+    ## porter uninstall hack --param acceptEULA=yes -c demo2 --param kubeconfig=$(pwd)/mykube
+    description: "The kubeconfig was generated during install."
+    type: file
+    path: /root/.kube/config
+    applyTo:
+    - uninstall
+
 
 outputs:
 - name: LoadBalancer
@@ -62,18 +72,28 @@ outputs:
   applyTo:
   - install
   - upgrade
+- name: kubeconfig
+  description: "Kubeconfig for the newly created "
+  type: file
+  applyTo:
+  - install
+  path: /root/.kube/config
+
 
 install:
   - exec:
       description: "Installing: Setting up kubernetes cluster"
       command: bash
       flags:
-        c: "/enab/app/hack-setup.sh {{ bundle.parametes.cluster }} {{ bundle.parameters.region }}"
+        c: "/cnab/app/hack-setup.sh {{ bundle.parameters.cluster }} {{ bundle.parameters.region }}"
   - exec:
       description: "Display Cluster info"
       command: bash
       flags:
         c: cat /root/.kube/config
+      outputs:
+      - name: kubeconfig
+        path: /root/.kube/config
   - qliksense:
       description: "Installing: Creating patch based on CR"
       name: qliksense-operator
@@ -166,5 +186,5 @@ uninstall:
       description: "Uninstalling: Deleteing kubernetes cluster"
       command: bash
       flags:
-        c: "/enab/app/hack-delete.sh {{ bundle.parametes.cluster }} {{ bundle.parameters.region }}"
+        c: "/cnab/app/hack-delete.sh {{ bundle.parameters.cluster }} {{ bundle.parameters.region }}"
 
