--- a/manifests/base/resources/odag/patches/selectivepatch.yaml
+++ b/manifests/base/resources/odag/patches/selectivepatch.yaml
@@ -9,3 +9,7 @@ patches:
     kind: Deployment
     name: odag
 - path: deployment.yaml
+- path: role.yaml
+  target:
+    kind: Role
+    name: odag
