--- a/manifests/base/resources/licenses/patches/selectivepatch.yaml
+++ b/manifests/base/resources/licenses/patches/selectivepatch.yaml
@@ -12,4 +12,8 @@ patches:
     target:
       kind: Deployment
       name: licenses
+  - path: role.yaml
+    target:
+      kind: Role
+      name: licenses
  
