--- a/porter.yaml
+++ b/porter.yaml
@@ -1,8 +1,8 @@
 name: Qliksense
-version: 0.3.0
+version: 0.3.0-aws
 description: "Qliksense application cnab bundle"
-invocationImage: qlik/qliksense-cnab-invocation:v0.3.0
-tag: qlik/qliksense-cnab-bundle:v0.3.0
+invocationImage: qlik/qliksense-cnab-invocation:v0.3.0-aws
+tag: qlik/qliksense-cnab-bundle:v0.3.0-aws
 
 dockerfile: Dockerfile.tmpl
 
@@ -39,6 +39,9 @@ parameters:
   - name: acceptEULA
     description: "Qliksense End User Licesense Aggrement"
     type: string
+    applyTo:
+    - install
+    - upgrade
   - name: profile
     type: string
     description: "Select a profile i.e docker-desktop, aws-eks, gke, azure. default is docker-desktop"
@@ -50,19 +53,21 @@ parameters:
   - name: scName
     description: "Storage Class Name to be used in PVCs"
     type: string
-    default: ""
+    default: efs
   - name: namespace
     description: "Which namespace the qliksense will be installed"
     type: string
     default: ""
   - name: kubeconfig
-    ##Before running uninstall 'porter instances outputs kubecofig show -i <name> > mykube'
+    ##Before running uninstall 'porter instances outputs show kubeconfig -i <name> > mykube'
     ## porter uninstall hack --param acceptEULA=yes -c demo2 --param kubeconfig=$(pwd)/mykube
     description: "The kubeconfig was generated during install."
     type: file
     path: /root/.kube/config
+    default: ""
     applyTo:
     - uninstall
+    - upgrade
 
 
 outputs:
@@ -174,14 +179,9 @@ uninstall:
       command: kubectl
       arguments:
       - delete
-      - deployment,services,statefulset,ingress,configmap,secrets,role,serviceaccount,rolebinding,pvc,crd
+      - deployment,services,statefulset,ingress,configmap,secrets,role,serviceaccount,rolebinding,pvc,crd,clusterrolebinding,clusterrole,serviceaccount,storageclass
       flags:
         l: release=qliksense
-  - helm:
-      description: "Uninstalling: Delete storage class helm chart"
-      purge: true
-      releases:
-        - efs
   - exec:
       description: "Uninstalling: Deleteing kubernetes cluster"
       command: bash
