--- a/manifests/base/transformers/clientCertificates/secret/selectivepatch.yaml
+++ b/manifests/base/transformers/clientCertificates/secret/selectivepatch.yaml
@@ -4,7 +4,7 @@ metadata:
   name: secretClientCertificates
   labels:
     key: secretClientCertificates
-enabled: false
+enabled: true
 patches:
 - target:
     kind: Deployment
@@ -20,7 +20,8 @@ patches:
           - name: main
             volumeMounts:
             - name: ca-certificates
-              mountPath: "/etc/ssl/certs"
+              mountPath: "/etc/ssl/certs/ca-certificates.crt"
+              subPath: ca-certificates.crt
           volumes:
           - name: ca-certificates
             secret:
