--- a/.operator/secrets/kustomization.yaml
+++ b/.operator/secrets/kustomization.yaml
@@ -1,6 +1,7 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1beta1
 resources:
 - qliksense.yaml
+- qliksense
 transformers:
 - ../../transformers
